--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -47,6 +47,11 @@
               <p style="margin-bottom: 5px;" class="text-tColor mt-2">Total Order Payment</p>
             </div>
 
+            <div class="bg-white rounded-3xl flex justify-center items-center flex-col h-28 ">
+              <p class="text-5xl"><%= sum_course_enroll_transaction[0].total %>&#2547</p>
+              <p style="margin-bottom: 5px;" class="text-tColor mt-2">Total Course Payment</p>
+            </div>
+
           </div>
 
           <div class="bg-white rounded-xl border-2 border-gray-200 p-5 mt-5">
