--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -102,6 +102,26 @@
                   <div class="h-5 w-5 flex items-center justify-center"><i class="fa-solid fa-book"></i></div>
                   <span>Instruments Tran.</span>
                 </a>
+
+                <a class="menu-list <%= nav==="course"?"menu-list-active":"" %>" href="/course">
+                  <div class="h-5 w-5 flex items-center justify-center"><i class="fa-solid fa-book"></i></div>
+                  <span>Course</span>
+                </a>
+
+                <a class="menu-list <%= nav==="course_transaction"?"menu-list-active":"" %>" href="/course-transaction">
+                  <div class="h-5 w-5 flex items-center justify-center"><i class="fa-solid fa-book"></i></div>
+                  <span>Course Transaction</span>
+                </a>
+
+                <a class="menu-list <%= nav==="teacher"?"menu-list-active":"" %>" href="/teacher">
+                  <div class="h-5 w-5 flex items-center justify-center"><i class="fa-solid fa-book"></i></div>
+                  <span>Teacher</span>
+                </a>
+
+                <a class="menu-list <%= nav==="banner"?"menu-list-active":"" %>" href="/banner">
+                  <div class="h-5 w-5 flex items-center justify-center"><i class="fa-solid fa-book"></i></div>
+                  <span>Banner</span>
+                </a>
                 
                 <a class="menu-list <%= nav==="contact_us"?"menu-list-active":"" %>" href="/contact-us">
                   <div class="h-5 w-5 flex items-center justify-center"><i class="fa-solid fa-book"></i></div>
